--- a/base-graphql-net-core/Properties/launchSettings.json
+++ b/base-graphql-net-core/Properties/launchSettings.json
@@ -20,6 +20,7 @@
     "base_graphql_net_core": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "ui/playground",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
