--- a/base-graphql-net-core/appsettings.json
+++ b/base-graphql-net-core/appsettings.json
@@ -9,5 +9,6 @@
   "ConnectionStrings": {
     "default": "Server=DN-TRAMHTD;Database=BaseGraphql;Trusted_Connection=True;"
   },
+  "GraphQLURI": "https://localhost:44392/graphql",
   "AllowedHosts": "*"
 }
